# coppermind

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dioxus.toml  LICENSE  README.md  download-models.sh  project_plan.md  temp_code_review.md  temp_code_review_plan.md
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
assets/: coppermind.css  main.css  worker.js
assets/workers/: embedding-worker.js
crates/coppermind/: Cargo.toml
crates/coppermind-cli/: Cargo.toml  README.md
crates/coppermind-cli/src/: config.rs  main.rs  mcp.rs  output.rs  search.rs
crates/coppermind-core/: Cargo.toml
crates/coppermind-core/benches/: indexing.rs  recall.rs  scalability.rs  search.rs  throughput.rs
crates/coppermind-core/src/: config.rs  error.rs  lib.rs  metrics.rs  test_utils.rs
crates/coppermind-core/src/chunking/: code_splitter_adapter.rs  markdown_splitter_adapter.rs  mod.rs  text_splitter_adapter.rs  tokenizer_sizer.rs  types.rs
crates/coppermind-core/src/embedding/: config.rs  mod.rs  model.rs  tokenizer.rs  traits.rs  types.rs
crates/coppermind-core/src/evaluation/: metrics.rs  mod.rs  stats.rs
crates/coppermind-core/src/evaluation/datasets/: mod.rs  natural_questions.rs  synthetic.rs
crates/coppermind-core/src/gpu/: mod.rs  scheduler.rs  serial_scheduler.rs  types.rs
crates/coppermind-core/src/processing/: mod.rs  pipeline.rs  progress.rs
crates/coppermind-core/src/search/: aggregation.rs  document_keyword.rs  engine.rs  keyword.rs  mod.rs  types.rs  vector.rs
crates/coppermind-core/src/search/engine/: compaction.rs  document.rs  mod.rs  source_tracking.rs  tests.rs
crates/coppermind-core/src/storage/: document_store.rs  mod.rs  redb_store.rs
crates/coppermind-core/tests/: integration_tests.rs
crates/coppermind-eval/: Cargo.toml  README.md
crates/coppermind-eval/data/coppermind-eval/: qrels.tsv  queries.jsonl  source_topics.json
crates/coppermind-eval/scripts/: generate-dataset.sh
crates/coppermind-eval/src/: main.rs
crates/coppermind-eval/src/datasets/: coppermind.rs  mod.rs
crates/coppermind/assets/: coppermind.css
crates/coppermind/assets/workers/: embedding-worker.js
crates/coppermind/src/: error.rs  lib.rs  main.rs  metrics.rs  test_utils.rs
crates/coppermind/src/components/: batch_processor.rs  file_processing.rs  mod.rs  settings_dialog.rs  testing.rs  web_crawler.rs  worker.rs
crates/coppermind/src/components/app_shell/: appbar.rs  footer.rs  metrics_pane.rs  mod.rs
crates/coppermind/src/components/index/: batch.rs  batch_list.rs  file_row.rs  mod.rs  upload_card.rs
crates/coppermind/src/components/search/: empty_state.rs  mod.rs  result_card.rs  search_card.rs  search_view.rs  source_preview.rs
crates/coppermind/src/crawler/: engine.rs  fetcher.rs  mod.rs  parser.rs
crates/coppermind/src/embedding/: assets.rs  mod.rs  model.rs  tokenizer.rs
crates/coppermind/src/embedding/chunking/: code_splitter_adapter.rs  markdown_splitter_adapter.rs  mod.rs  text_splitter_adapter.rs
crates/coppermind/src/gpu/: error.rs  mod.rs  scheduler.rs  serial_scheduler.rs  types.rs
crates/coppermind/src/platform/: mod.rs
crates/coppermind/src/processing/: embedder.rs  mod.rs  processor.rs
crates/coppermind/src/search/: mod.rs
crates/coppermind/src/storage/: indexeddb_store.rs  mod.rs  native.rs  opfs.rs
crates/coppermind/src/utils/: error_ext.rs  formatting.rs  mod.rs
crates/coppermind/src/workers/: mod.rs
docs/: DESIGN.md  README.md  architecture-design.md  browser-ml-architecture.md  candle-known-issues.md  candle-metal-threading-issue.md  config-options.md  dioxus-background-tasks.md  ecosystem-and-limitations.md  evaluation-guide.md  innovation-ideas.md  ir-evaluation-datasets-analysis.md  model-optimization.md  profiling.md  roadmap.md  web-worker-implementation.md
docs/adr/: 0001-hybrid-search-architecture.md
docs/adrs/: 001-sentence-based-chunking.md  002-web-crawler-desktop-first.md  003-wasm-threading-workaround.md  004-incremental-vector-search.md  005-workspace-structure.md  006-gpu-scheduler.md  007-document-storage-reupload-handling.md  008-multi-level-indexing.md  009-metrics-overhaul.md  010-benchmarking-framework.md
docs/prompts/: code-review.md  doc-review.md  in-progress-cr.md  multi-agent-code-review.md
docs/ux/: index.html  ux-spec.md
docs/ux/assets/: coppermind.css
docs/ux/components/: appbar.html  index-view.html  metrics-pane.html  result-card.html  search-view.html  source-preview.html  status-strip.html
icons/: icon.icns
scripts/: fix-trace.py
src/: components.rs  cpu.rs  embedding.rs  error.rs  lib.rs  main.rs  wgpu.rs
src/components/: batch_processor.rs  file_processing.rs  file_upload.rs  hero.rs  legacy_search.rs  mod.rs  search.rs  testing.rs  web_crawler.rs  worker.rs
src/components/app_shell/: appbar.rs  metrics_pane.rs  mod.rs  status_strip.rs
src/components/index/: batch.rs  current_batch.rs  file_row.rs  index_view.rs  mod.rs  previous_batches.rs  upload_card.rs
src/components/search/: mod.rs  result_card.rs  search_view.rs  source_preview.rs
src/crawler/: engine.rs  mod.rs
src/embedding/: assets.rs  config.rs  mod.rs  model.rs  tokenizer.rs
src/embedding/chunking/: code_splitter_adapter.rs  fixed.rs  markdown_splitter_adapter.rs  mod.rs  sentence.rs
src/processing/: embedder.rs  processor.rs
src/search/: aggregation.rs  engine.rs  fusion.rs  keyword.rs  mod.rs  types.rs  vector.rs
src/storage/: mod.rs  native.rs
src/utils/: error_ext.rs  signal_ext.rs
src/workers/: mod.rs
