[workspace]
resolver = "2"
members = ["crates/coppermind-core", "crates/coppermind"]

# Workspace-wide profile settings
[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

# See `.cargo/config.toml` for WASM-specific rustflags and memory limits.
