[package]
name = "coppermind-core"
version = "0.1.0"
authors = ["Matthew Emerson <emersonmde@protonmail.com>"]
edition = "2021"
description = "Core library for Coppermind semantic search - platform-independent search, embedding, and chunking"

[lib]
name = "coppermind_core"
path = "src/lib.rs"

[features]
default = []
# Syntax-aware code chunking (requires tree-sitter C library, native only)
tree-sitter = [
    "dep:tree-sitter",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-python",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-java",
    "dep:tree-sitter-c",
    "dep:tree-sitter-cpp",
    "dep:tree-sitter-go",
    "text-splitter/code",
]
# Web crawler (native only - CORS blocks web platform)
crawler = ["dep:reqwest", "dep:url"]

[dependencies]
# Storage and search dependencies
async-trait = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }

# Hybrid search
bm25 = "2.3"
hnsw = "0.11"
space = "0.17"
rand = "0.8"

# Cross-platform timing
instant = { version = "0.1", features = ["wasm-bindgen"] }

# Logging (platform-agnostic)
tracing = "0.1"

# Optional: tree-sitter for code chunking (native only)
tree-sitter = { version = "0.24", optional = true }
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-c = { version = "0.23", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }
text-splitter = { version = "0.18", default-features = false, optional = true }

# Optional: crawler dependencies (native only)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
url = { version = "2.5", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
