[package]
name = "coppermind"
version = "0.1.0"
authors = ["Matthew Emerson <emersonmde@protonmail.com>"]
edition = "2021"

[lib]
name = "coppermind"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core library (will gain more functionality as migration progresses)
# Note: redb-store feature is enabled via desktop feature below
coppermind-core = { path = "../coppermind-core" }

# Cross-platform dependencies
dioxus = { version = "0.7.1", features = [] }
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
# Using 0.9.1 stable (0.9.2-alpha.1 has Metal crash in allocate_zeros)
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.4"
tokenizers = { version = "0.20", default-features = false, features = ["unstable_wasm"] }
once_cell = "1.19"

# wasm-bindgen + web APIs: used in embedding/cpu/wgpu modules
# (safe to include on all platforms - browser APIs won't be called on desktop)
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = [
    "Worker", "WorkerOptions", "WorkerType", "MessageEvent", "console", "Blob", "Url", "Window", "Navigator",
    "DedicatedWorkerGlobalScope", "Request", "RequestInit", "RequestMode", "Response", "Headers",
    "Document", "Element", "NodeList", "HtmlScriptElement"
] }

# Async trait for storage implementations
async-trait = "0.1"

# Text chunking (semantic splitting)
# Note: We implement our own ChunkSizer instead of using the tokenizers feature
# to avoid pulling in onig (C library) which breaks WASM builds
# markdown feature uses pulldown-cmark (pure Rust, WASM-compatible)
text-splitter = { version = "0.18", default-features = false, features = ["markdown"] }

# Error handling with derive macros
thiserror = "2.0"

# Text processing
regex = "1.11"

# Cross-platform timing (works on WASM and native)
instant = { version = "0.1", features = ["wasm-bindgen"] }

# Web crawler (platform-specific - desktop only for now due to CORS)
scraper = "0.22"  # Pure Rust HTML parser, works on WASM and native
url = "2.5"       # URL parsing and same-origin detection
reqwest = { version = "0.12", default-features = false }
content_inspector = "0.2"  # Binary vs text detection (NULL byte + BOM checking)

[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM-only dependencies
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo-timers = { version = "0.3", features = ["futures"] }

# IndexedDB wrapper for DocumentStore implementation
rexie = "0.6"

# OPFS storage features (web-only)
web-sys = { version = "0.3", features = [
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
    "FileSystemSyncAccessHandle",
    "FileSystemGetFileOptions",
    "FileSystemGetDirectoryOptions",
    "FileSystemRemoveOptions",
    "StorageManager",
    "File"
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native filesystem for desktop
tokio = { version = "1", features = ["fs", "rt", "macros", "time"] }

# Platform-specific data directories (Application Support on macOS, AppData on Windows, etc.)
directories = "5.0"

# Native file dialogs for desktop (folder + file selection)
rfd = "0.15"

# Profiling (optional, enabled with --features profile)
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"], optional = true }
tracing-chrome = { version = "0.7", optional = true }

# Web crawler with TLS support (desktop only - CORS blocks web platform)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Code chunking with tree-sitter (native only - C library doesn't work on WASM)
# Enables syntax-aware chunking for programming languages
text-splitter = { version = "0.18", default-features = false, features = ["code"] }
tree-sitter = "0.24"

# Tree-sitter language parsers for code chunking
# Versions are determined by what tree-sitter version text-splitter requires
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"

[target.'cfg(target_os = "macos")'.dependencies]
# GPU acceleration for macOS desktop (Metal + Accelerate)
candle-core = { version = "0.9.1", features = ["metal", "accelerate"] }
candle-nn = { version = "0.9.1", features = ["metal", "accelerate"] }
candle-transformers = { version = "0.9.1", features = ["metal", "accelerate"] }

[target.'cfg(target_os = "ios")'.dependencies]
# iOS uses CPU-only with Accelerate (Metal has compatibility issues in simulator)
# Real devices could use Metal, but CPU mode ensures universal compatibility
candle-core = { version = "0.9.1", features = ["accelerate"] }
candle-nn = { version = "0.9.1", features = ["accelerate"] }
candle-transformers = { version = "0.9.1", features = ["accelerate"] }

[target.'cfg(all(not(target_arch = "wasm32"), not(any(target_os = "macos", target_os = "ios")), any(target_arch = "x86_64", target_arch = "x86")))'.dependencies]
# Intel MKL CPU optimization for x86/x86_64 platforms (Windows, Linux)
# Excluded from Apple platforms which use Accelerate instead
candle-core = { version = "0.9.1", features = ["mkl"] }
candle-nn = { version = "0.9.1", features = ["mkl"] }
candle-transformers = { version = "0.9.1", features = ["mkl"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop", "coppermind-core/redb-store"]
mobile = ["dioxus/mobile", "coppermind-core/redb-store"]
# Performance profiling - generates trace.json for chrome://tracing
# Usage: dx serve --platform desktop --features profile
profile = ["tracing", "tracing-subscriber", "tracing-chrome"]
# Optional CUDA support for NVIDIA GPUs (requires CUDA toolkit installed)
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
# Enhanced CUDA with cuDNN for deep learning (requires CUDA + cuDNN installed)
# Note: cudnn feature only available in candle-core
cudnn = ["cuda", "candle-core/cudnn"]

[dev-dependencies]
tempfile = "3.14"
